<resources>
    <string name="app_name">Tepat Tiga</string>
    <string name="admin_name">AGENT PUSAT</string>
    <string name="admin_login">Agent Login</string>
    <string name="admin_email">agen.tepat@mail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="balance">Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">799.000</string>
    <string name="welcome">Selamat datang,</string>
    <string name="balance_idr">Rp</string>
    <string name="saldo">Saldo</string>
    <string name="title_lokasi">Lokasi Distribusi Gas</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="area">Area</string>
    <string name="check_stok">Cek Stok</string>
    <string name="citizen_id">2212113009800001</string>
    <string name="admin_address">Jakarta Selatan</string>
    <string name="gas_stock">Stok Gas : </string>
    <string name="detail_agent">Detail Pangkalan: </string>
    <string name="stok_bright5.5">Stok Bright 5,5Kg</string>
    <string name="stok_bright12">Stok Bright 12Kg</string>
    <string name="stok_elpiji3">Stok Elpiji 3Kg </string>
    <string name="stok_elpiji12">Stok Elpiji 12Kg</string>
    <string name="stok_ease3">Stok Ease 3Kg</string>
    <string name="stok_ease9">Stok Ease 9Kg</string>
    <string name="history_trans">Riwayat Transaksi</string>
    <string name="input_date">Input Date</string>
    <string name="non_pso">NON-SUBSIDI</string>
    <string name="pso">SUBSIDI</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="tanggal_kirim">Tanggal Pengiriman</string>
    <string name="jumlah_produk">QTY</string>
    <string name="tambah_stok">Tambah Stok Baru</string>
    <string name="note_trx_success">Transaksi Berhasil</string>
    <string name="note_nomor_kks">Nomor KKS</string>
    <string name="note_pembelian">Pembelian : </string>


</resources>
