<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_stok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="48dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp"
            card_view:cardMaxElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/provinsi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark" />

                <Spinner
                    android:id="@+id/province_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/kota"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark" />

                <Spinner
                    android:id="@+id/city_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/area"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark" />

                <Spinner
                    android:id="@+id/area_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <Button
                    android:id="@+id/bt_cekStok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:text="@string/check_stok" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>