<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="-"
            android:textColor="@color/c_blue_dark"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_agenPic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nama Agen"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_namaAgen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wawan Budiman"
                    android:textColor="@color/c_black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_statusAgen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agen tidak nakal"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_bright5.5"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_bright5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_bright12"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_bright12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_elpiji3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_elpiji3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_elpiji12"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_elpiji12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_ease3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_ease3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stok_ease9"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_ease9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black" />

                <Button
                    android:id="@+id/btn_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_trans"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>